[package]
name = "nanoflann"
version = "0.3.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Safe Rust KD-tree port inspired by nanoflann's adaptor API"
repository = "https://github.com/RustedBytes/nanoflann"
readme = "README.md"

[lib]
name = "nanoflann"
path = "src/lib.rs"

[dependencies]
