[package]
name = "nanoflann"
version = "0.5.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Safe Rust KD-tree port inspired by nanoflann's adaptor API"
repository = "https://github.com/RustedBytes/nanoflann"
readme = "README.md"

[lib]
name = "nanoflann"
path = "src/lib.rs"

[dependencies]

[features]
default = []
# Enables experimental SIMD acceleration using `std::simd` (portable SIMD).
# Requires a nightly Rust toolchain:
#   cargo +nightly bench --features simd
simd = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "kdtree_bench"
harness = false
